--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.1.3",
+    "styled-reset": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
